--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.2",
     "@pinia/nuxt": "^0.7.0",
+    "lodash": "^4.17.21",
     "nuxt": "^3.14.159",
     "pinia": "^2.2.6",
     "sass": "^1.81.0",
@@ -22,6 +23,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@vueuse/core": "^11.3.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
